# claude-code-decypher

./: .gitignore  CLAUDE.md  Cargo.toml  PLAN.md  README.md
benches/: parsing_bench.rs  transformation_bench.rs
docs/: AST-BASED-CODE-SPLITTING-IMPLEMENTATION.md  CHANGELOG.md  COMPLETE.md  EXTRACTION-ANALYSIS.md  EXTRACTION_VALIDATION_REPORT.md  FINAL-PROJECT-SUMMARY.md  FINAL-RELEASE.md  FINAL-STATUS-v1.0.md  FINAL-SUMMARY.md  FINAL_EXTRACTION_REPORT.md  PHASE3-COMPLETE.md  PHASE4-COMPLETE.md  PHASE5-COMPLETE.md  PHASE_3_4_FINAL_REPORT.md  PROJECT-COMPLETE-FINAL.md  PROJECT-COMPLETE.md  PROJECT-FINAL-STATUS.md  PROJECT-STATUS.md  QUICKSTART.md  RELEASE-CHECKLIST.md  TOOLS-FOUND.md  ULTIMATE-GUIDE.md  USAGE-SHOWCASE.md  VERSION-1.0.md
scripts/: extract_tools_from_beautified.sh  find_tools.sh  validate.sh
specs/: 0001-design-and-plan.md  0002-extraction-improvement.md  instructions.md
src/: cli.rs  dashboard.rs  error.rs  lib.rs  main.rs  output.rs
src/analysis/: callgraph.rs  complexity.rs  metrics.rs  mod.rs  report.rs
src/analyzer/: mod.rs  symbols.rs
src/extractor/: beautified_tools.rs  config.rs  mod.rs  prompts.rs  prompts_enhanced.rs  schemas.rs  strings.rs  tools.rs
src/parser/: mod.rs  visitor.rs
src/transformer/: advanced_split.rs  code_assembler.rs  codegen.rs  dependency_analyzer.rs  docs.rs  function_extractor.rs  import_generator.rs  mod.rs  module_assigner.rs  split.rs  (+2 more)
tests/: comprehensive_integration_test.rs.bak  full_pipeline_test.rs  integration_test.rs  phase2_integration_test.rs  phase3_integration_test.rs  phase4_integration_test.rs
(+3 files in other folders)
