[package]
name = "claude-code-decypher"
version = "0.1.0"
authors = ["Your Name <YourName@yourdomain.com>"]
edition = "2024"
license = "MIT"
documentation = "https://docs.rs/"
repository = "https://github.com/TODO"
homepage = "https://github.com/TODO"
description = """
A Rust tool to deobfuscate and analyze minified JavaScript code from Claude Code.
"""
readme = "README.md"
categories = ["development-tools"]
keywords = ["javascript", "parser", "deobfuscator", "ast", "analysis"]

[dependencies]
# Error handling
anyhow = "1.0"
thiserror = "2.0"

# CLI
clap = { version = "4.5", features = ["derive", "cargo"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Oxc parser ecosystem
oxc_allocator = "0.56"
oxc_ast = "0.56"
oxc_parser = "0.56"
oxc_span = "0.56"
oxc_diagnostics = "0.56"
oxc_codegen = "0.56"

# String processing
regex = "1.11"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
criterion = "0.5"
tempfile = "3.13"
